// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test state handler test s ops 1`] = `"a"`;

exports[`test state handler test set_collection 1`] = `
Immutable.Map {
  "collection": Immutable.List [
    "a",
    "b",
    "c",
  ],
}
`;

exports[`test state handler test set_collection 2`] = `"b"`;

exports[`test state handler test set_collection 3`] = `
Immutable.Map {
  "collection": Immutable.List [
    "a",
    "b",
    "c",
  ],
  "index": 1,
  "value": "b",
}
`;

exports[`test state handler test set_value 1`] = `
Immutable.Map {
  "value": Immutable.Map {
    "key": "value",
  },
}
`;

exports[`test state handler test set_value 2`] = `
Immutable.Map {
  "key": "value",
}
`;
